# ProsodyPrompt

./: .gitignore  APPENDIX_F_DRAWSPEECH.md  ARCHITECTURE.md  CLEANUP_AND_PUSH.sh  COMPLETE_DEMO.sh  FINAL_TEST.sh  GITHUB_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.txt  PUSH_TO_GITHUB.md  README.md  SETUP_DRAWSPEECH.sh  STATUS_REPORT.md  SpeechPrint.ipynb  TESTING_STATUS.md  TODO.md  VISION_VS_IMPLEMENTATION.md  doreco_kaka1265_kke-c_2013-12-27_AK-narr-1.TextGrid  pyproject.toml  requirements.txt  setup.py  todo.md  vim.ipynb
linux/: RESYNTHESIS_README.md  SPEECH_DAW_README.md  SpeechPrint  TEST_ALL_APPENDIX_DE.sh  TEST_APPENDIX_D_E.py  WORKING_DEMO.py  audio2tract.py  build_all_optimised.py  build_cabeca.py  build_class_comparison.py  build_doreco_speechprint.py  build_final_folders.py  build_final_textgrid.py  build_minimal_pairs_textgrid.py  build_questionnaire_v3.py  doreco_cabeca.TextGrid  doreco_port1286_2017_06_30_Jaklin.TextGrid  evaluate_aligners.py  make_gtobi_videos.py  merge_gtobi.py  merge_textgrids.py  nmf_ambi.py  pitch_tracker_comparison.py  prosody2tract.py  prosody_morph.py  prosody_prompt.py  pyproject.toml  questionnaire_textgrids.py  resynthesis_cli.py  run.py  simple_spatial.py  spatial_core.py  spatial_demo.py  speech_daw_server.py  speechprint-config.json  speechprint_cli.py  speechprint_latent.py  synthesize_audio.py  synthesize_with_drawspeech.py  webcam_spatial.py
linux/ five GToBI annotated sentences/: eine_gelbe_banane.TextGrid  einige_melonen.TextGrid  er_sang_die_lieder.TextGrid  er_will_die_rosen_haben.TextGrid  (+1 more)
linux/lib/: config.py  (+1 more)
(+131 files in other folders)
