[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechprint"
version = "0.3.0"
description = "SpeechPrint installer and corpus creator for Linux"
requires-python = ">=3.11"
dependencies = [
    "bleak>=3.0.2",
    "h5py>=3.16.0",
    "librosa>=0.11.0",
    "mediapipe>=0.10.35",
    "netcdf4>=1.7.4",
    "opencv-python>=4.13.0.92",
    "PyGObject",
    "pynput>=1.8.2",
    "python-osc>=1.10.2",
    "sounddevice>=0.5.5",
    "spaudiopy>=0.2.0",
]

[project.scripts]
speechprint-installer = "lib.main:main"
speechprint = "lib.cli:main"

[tool.setuptools]
packages = ["lib", "lib.modes", "lib.ui"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
lib = ["ui/dark.css"]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
select = ["E", "F"]
ignore = ["E402", "E501"]
